--- a/fbintern.html
+++ b/fbintern.html
@@ -28,16 +28,16 @@
 
   <!-- SEO -->
   <meta name="description"
-    content="Jasper Tu is a product designer studying at York University / Sheridan College (YSDN) | Incoming Product Design intern at Facebook.">
+    content="Jasper Tu is a product designer studying at York University / Sheridan College (YSDN) | Former Product Design Intern at Facebook.">
   <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1">
-  <link rel="canonical" href=""> <!-- Insert link to my website here -->
+  <link rel="canonical" href="https://jaspertu.github.io/"> <!-- Insert link to my website here -->
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
-  <meta property="og:image" content=""> <!-- Insert website preview image here -->
+  <meta property="og:image" content="./img/peace.png"> <!-- Insert website preview image here -->
   <meta property="og:title" content="Jasper Tu | Product Designer">
   <meta property="og:description"
     content="Jasper Tu is a product designer studying at York University / Sheridan College (YSDN) | Graphic and UX Design in Toronto and the GTA.">
-  <meta property="og:url" content=""> <!-- Insert link to my website here -->
+  <meta property="og:url" content="https://jaspertu.github.io/"> <!-- Insert link to my website here -->
   <meta property="og:site_name" content="Jasper Tu">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:site" content="@jasper_tu">
@@ -119,9 +119,9 @@
         <p class="bodyType">
           Being a product design intern over Summer 2020 at Facebook was undoubtedly my toughest test to date. The
           adversity I faced was perhaps amplified by the fact that this was my first ever professional product design
-          role ever—done in a remote setting during a COVID-19 pandemic to top it off. I had an ever-growing amount of
+          role—done in a remote setting during a COVID-19 pandemic to top it off. I had an ever-growing amount of
           opportunities to evolve at Facebook and I quickly discovered to make the most of my time and efforts, I had to
-          learn about both product design and my problem space with immense intentionality to improve my feature
+          learn about FB culture, product design, and my problem space with immense intentionality to improve my feature
           meaningfully.
         </p>
 
