--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
 
   <!-- SEO -->
   <meta name="description"
-    content="Jasper Tu is a product designer studying at York University / Sheridan College (YSDN) | Incoming Product Design intern at Facebook.">
+    content="Jasper Tu is a product designer studying at York University / Sheridan College (YSDN) | Former Product Design Intern at Facebook.">
   <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1">
-  <link rel="canonical" href=""> <!-- Insert link to my website here -->
+  <link rel="canonical" href="https://jaspertu.github.io/"> <!-- Insert link to my website here -->
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
-  <meta property="og:image" content=""> <!-- Insert website preview image here -->
+  <meta property="og:image" content="./img/peace.png"> <!-- Insert website preview image here -->
   <meta property="og:title" content="Jasper Tu | Product Designer">
   <meta property="og:description"
     content="Jasper Tu is a product designer studying at York University / Sheridan College (YSDN) | Graphic and UX Design in Toronto and the GTA.">
-  <meta property="og:url" content=""> <!-- Insert link to my website here -->
+  <meta property="og:url" content="https://jaspertu.github.io/"> <!-- Insert link to my website here -->
   <meta property="og:site_name" content="Jasper Tu">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:site" content="@jasper_tu">
@@ -161,10 +161,9 @@
           </a>
         </article>
 
-        <!--
-        Playdium
+        <!--Playdium-->
         <article>
-          <a class="projectSingle" href="#" target="_blank">
+          <a class="projectSingle" href="playdium.html">
             <img class="projectCover" src="./img/home-cover-Playdium.jpg" loading="lazy" alt="Historia">
             <div>
               <h2 class="projectTitle">Playdium</h2>
@@ -175,7 +174,7 @@
               <span class="projectType">Tablet</span>
             </div>
           </a>
-        </article>-->
+        </article>
       </section>
     </div>
   </div>
