--- a/playdium.html
+++ b/playdium.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>About—Jasper Tu</title>
+  <title>Playdium—Jasper Tu</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -55,9 +55,9 @@
     <nav>
       <li><a class="navLogo" href="index.html">J∙TU</a></li>
       <ul class="navLinks">
-        <li><a class="workNav" href="index.html">Work</a></li>
+        <li><a class="workNav" id="active" href="index.html">Work</a></li>
         <!-- <li><a class="playNav" href="">Play</a></li> -->
-        <li><a class="aboutNav" id="active" href="about.html">About</a></li>
+        <li><a class="aboutNav" href="about.html">About</a></li>
       </ul>
     </nav>
   </div>
@@ -69,80 +69,71 @@
   <div class="gridCenterer marginTopBottom">
     <div class="container">
 
-      <header class="aboutPhotoGallery">
-        <!-- Right side -->
-        <img class="aboutPhoto1" src="./img/0J8A0224.jpg" loading="lazy" alt="">
+      <header class="jasperHeader">
+        <!-- Right side of header (text) -->
+        <div class="headerRight">
+          <div class="headerTitleButton">
+            <div>
+              <h1 class="jasperTitle">
+                Playdium
+              </h1>
+              <h2 class="bodyType">
+                <img class="avatar" src="./img/IMG_2685.PNG" loading="lazy" alt="Avatar">
+                <span class="bodyTypeBold">Jasper Tu</span> • Sep 2020 • 1
+                min read
+              </h2>
+            </div>
+            <div class="buttonMarginTop">
+              <a href="https://xd.adobe.com/view/ba7685f8-3c40-41ed-4647-d3456229a298-cc47/" class="button"
+                target="_blank">Link to XD
+                Prototype</a>
+            </div>
+          </div>
 
-        <!-- Left side -->
-        <img class="aboutPhoto2" src="./img/0J8A0170.jpg" loading="lazy" alt="">
+          <!--Cover photo-->
+          <img class="caseStudyCover" src="./img/home-cover-Playdium.jpg" loading="lazy" alt="FB cover">
+
+          <!--Project Quick Stats-->
+          <h3 class="quickStatType">
+            <p class="quickStatTitleType">Overview</p>
+            A project completed for the Nickelodeon + Adobe XD Creative Jam, winning 3rd place<br>
+            <p class="quickStatTitleType marginS--top">Team</p>
+            Jasper Tu, Kiran Patel, Paco Lui, Andrew Del Rizzo
+            <p class="quickStatTitleType marginS--top">Role</p>
+            Research, Ideation, UI/UX, Design System
+            <p class="quickStatTitleType marginS--top">Tools</p>
+            Adobe XD
+            <p class="quickStatTitleType marginS--top">Duration</p>
+            <p class="marginS--bottom">48 hours, April 2020</p>
+            <hr>
+          </h3>
+        </div>
       </header>
 
-      <h2 class="projectTitle marginParaSpace--bottom">Hi, I’m Jasper! Product designer & early riser.</h2>
+      <!-- Main content -->
+      <section class="marginM--top">
+        <h2 class="projectTitle marginXS--bottom">What is Playdium?</h2>
+        <p class="bodyType marginS--bottom">
+          Grade 6 to 8 kids enjoy being physically connected through fun, outdoor games. However, this positive
+          experience has now been taken away due to COVID-19. From being locked up at home, user research revealed 11–13
+          year olds often suffer from increased anxiety, nightmares, and meltdowns. Hence, we digitized manhunt—one of
+          their favourite games—to let 11–13 year olds spark joy, relieve stress, and enlighten them on best health
+          practices.
+        </p>
 
-      <p class="bodyType marginParaSpace--bottom">
-        Previously, I worked on the Branded Content team at Facebook as a Product Design Intern.
-      </p>
-      <p class="bodyType marginParaSpace--bottom">
-        I am a product designer who has worked on design systems, influencer marketplaces, and business
-        tools. In my professional career, I have always experienced a strong pull towards working in the technology
-        sector due to its capacity to spark positive global change on a grand scale. From past experiences, I have felt
-        most content tackling complex problem spaces collaboratively to extend human potential.
-      </p>
-      <p class="bodyType marginParaSpace--bottom">
-        My expertise at the moment lies in zero-to-one projects involving a high degree of product thinking and visual
-        design. I consider it my mission to develop simple yet elegant solutions which are responsive to human needs and
-        considerate of human frailties.
-      </p>
-      <p class="bodyType marginS--bottom">
-        In my spare time, I enjoy participating in hackathons, reading, fitness, and exploring places through
-        photography. With empathetic design, I hope to help those less fortunate and to inspire others to pursue their
-        greater dreams and ambitions.
-      </p>
-      <hr>
+        <p class="bodyType">
+          Playdium cheers up lonely children stuck at home by letting them personalize their own character, theme their
+          game worlds with Nickelodeon shows, and most importantly, connect with friends and family through manhunt
+          within a rich, 3D world. Simultaneously, it facilitates learning of important health and safety knowledge
+          pertaining to COVID-19; if one gets “tagged”, they are challenged to answer questions correctly within a time
+          limit. Enriching the game experience are items which give temporary power-ups.
+        </p>
 
-      <h3 class="bodyTypeBold marginM--top margin1rem--bottom">Achievements 🏆</h3>
-
-      <p class="quickStatType margin1rem--bottom">
-        <span class="quickStatTitleType">1st Place Award</span>
-        <br>—A+E Networks + Adobe Creative Jam Live</span>
-      </p>
-
-      <p class="quickStatType margin1rem--bottom">
-        <span class="quickStatTitleType">3rd Place Award</span>
-        <br>—Nickelodeon + Adobe Creative Jam Live</span>
-      </p>
-
-      <p class="quickStatType margin1rem--bottom">
-        <span class="quickStatTitleType">4th Place Award</span>
-        <br>—Airbnb + Adobe Creative Jam Live</span>
-      </p>
-
-      <p class="quickStatType margin1rem--bottom">
-        <span class="quickStatTitleType">Honourable Mention</span>
-        <br>—RGD Student Awards: Bell Media Award for
-        Typography (Digital)</span>
-      </p>
-
-      <p class="quickStatType margin1rem--bottom">
-        <span class="quickStatTitleType">Michael Plexman Award for Creative Innovation</span>
-        <br>—York University Scholarship</span>
-      </p>
-
-      <p class="quickStatType margin1rem--bottom">
-        <span class="quickStatTitleType">Brazilian Ball Interdisciplinary Award</span>
-        <br>—York University Scholarship</span>
-      </p>
-
-      <p class="quickStatType margin1rem--bottom">
-        <span class="quickStatTitleType">The Bill Chan Bursary</span>
-        <br>—York University Bursary</span>
-      </p>
-
-      <p class="quickStatType">
-        <span class="quickStatTitleType">Continuing Student Scholarship</span>
-        <br>—York University Scholarship</span>
-      </p>
-
+        <h3 class="bodyTypeBold marginM--top marginXS--bottom">Live Prototype</h3>
+        <iframe class="playdiumPrototype"
+          src="https://xd.adobe.com/embed/ba7685f8-3c40-41ed-4647-d3456229a298-cc47/?fullscreen" frameborder="0"
+          allowfullscreen></iframe>
+      </section>
     </div>
   </div>
 
