--- a/index.html
+++ b/index.html
@@ -175,6 +175,19 @@
             </div>
           </a>
         </article>
+
+        <!--Canada's Languages-->
+        <article>
+          <a class="projectSingle" href="canadaLanguages.html">
+            <img class="projectCover" src="./img/home-cover-Languages.jpg" loading="lazy" alt="Historia">
+            <div>
+              <h2 class="projectTitle">Canada's Languages</h2>
+              <p class="projectDescription">A website for tourists exploring Canada's top non-official languages.</p>
+              <span class="projectType">Data Visualization</span>
+              <span class="projectType">Web Design</span>
+            </div>
+          </a>
+        </article>
       </section>
     </div>
   </div>
