--- a/index.html
+++ b/index.html
@@ -188,6 +188,21 @@
             </div>
           </a>
         </article>
+
+        <!--Spark-->
+        <article>
+          <a class="projectSingle" href="spark.html">
+            <img class="projectCover" src="./img/home-cover-Spark.jpg" loading="lazy" alt="Historia">
+            <div>
+              <h2 class="projectTitle">Spark</h2>
+              <p class="projectDescription">A conference connecting creative pros to mentors, opportunities, and
+                resources.</p>
+              <span class="projectType">Front-End Code</span>
+              <span class="projectType">Product Design</span>
+            </div>
+          </a>
+        </article>
+
       </section>
     </div>
   </div>
