--- a/canadaLanguages.html
+++ b/canadaLanguages.html
@@ -71,7 +71,7 @@
   <div class="gridCenterer marginTopBottom">
     <div class="container">
 
-      <header class="jasperHeader">
+      <header class="jasperHeader reveal">
         <!-- Right side of header (text) -->
         <div class="headerRight">
           <div class="headerTitleButton">
@@ -243,6 +243,13 @@
       })();
   </script>
 
+  <!--Scroll reveal JS-->
+  <script src="./js/scrollreveal.min.js.download"></script>
+  <script>
+    // JavaScript
+    window.sr = ScrollReveal({ reset: true });
+    sr.reveal('.reveal', { duration: 1500, distance: '20px', useDelay: 'once', scale: 1, });
+  </script>
 </body>
 
 </html>
