--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
           </h1>
           <h2 class="jasperFacts">
             <img class="emoji" src="./img/rightArrowEmoji.png" loading="lazy" alt="Right Arrow"> Humane product designer
-            <!--<span class="moreDetail">who can
+            <span class="moreDetail">who can
               code
-            </span>--><br>
+            </span><br>
             <img class="emoji" src="./img/rightArrowEmoji.png" loading="lazy" alt="Right Arrow"> Former <a
               class="fbLinkHeader" href="https://facebook.design/" target="_blank">Facebook</a> <span
               class="moreDetail">Product</span>
