--- a/index.html
+++ b/index.html
@@ -126,10 +126,11 @@
       <section class="projects marginTopBottom">
         <!-- Facebook Internship -->
         <article>
-          <a class="projectSingle" href="fbintern.html">
+          <a class="projectSingle locked" href="#">
             <img class="projectCover" src="./img/home-cover-FB.jpg" loading="lazy" alt="Historia">
             <div class="reveal">
-              <h2 class="projectTitle">Facebook Internship</h2>
+              <h2 class="projectTitle">Facebook Internship <img class="emoji" src="img/lockEmoji.png" loading="lazy"
+                  alt="Lock"></h2>
               <p class="projectDescription">Fostering more clarity for branded content creators &
                 <span class="moreDetail">potential</span> partners.</p>
               <!-- <p class="awardText">
@@ -156,7 +157,7 @@
               </p> -->
               <span class="projectType">User Research</span>
               <span class="projectType">UI & UX <span class="moreDetail">Design</span></span>
-              <span class="projectType">Smartphone</span>
+              <span class="projectType">iOS</span>
             </div>
           </a>
         </article>
@@ -176,7 +177,8 @@
           </a>
         </article>
 
-        <!--Spark-->
+        <!--
+        Spark
         <article>
           <a class="projectSingle" href="spark.html">
             <img class="projectCover" src="./img/home-cover-Spark.jpg" loading="lazy" alt="Historia">
@@ -189,8 +191,10 @@
             </div>
           </a>
         </article>
+        <!--
 
-        <!--Canada's Languages-->
+        <!--
+        Canada's Languages
         <article>
           <a class="projectSingle" href="canadaLanguages.html">
             <img class="projectCover" src="./img/home-cover-Languages.jpg" loading="lazy" alt="Historia">
@@ -202,6 +206,7 @@
             </div>
           </a>
         </article>
+        -->
 
       </section>
     </div>
