Character Length Commit

--- a/fbintern.html
+++ b/fbintern.html
@@ -87,7 +87,7 @@
           <!--Project Quick Stats-->
           <h3 class="quickStatType">
             <p class="quickStatTitleType">Objective</p>
-            Enable branded content creators to better communicate their pricing needs to potential partners<br>
+            Enable branded content creators to better communicate pricing needs to potential partners<br>
             <p class="quickStatTitleType marginS--top">Team</p>
             Branded Content—Facebook App Monetization (FAM)
             <p class="quickStatTitleType marginS--top">Role</p>
@@ -102,7 +102,7 @@
       </header>
 
       <!-- Main content -->
-      <section class="marginM--top">
+      <section class="marginM--top bodyWrapper">
         <h2 class="projectTitle marginXS--bottom">What did I work on?</h2>
         <p class="bodyType marginS--bottom">
           Over the course of summer 2020, I designed a zero-to-one feature for Facebook’s Branded Content products. At a
