--- a/playdium.html
+++ b/playdium.html
@@ -111,7 +111,7 @@
       </header>
 
       <!-- Main content -->
-      <section class="marginM--top">
+      <section class="marginM--top bodyWrapper">
         <h2 class="projectTitle marginXS--bottom">What is Playdium?</h2>
         <p class="bodyType marginS--bottom">
           Grade 6 to 8 kids enjoy being physically connected through fun, outdoor games. However, this positive
@@ -125,15 +125,16 @@
           Playdium cheers up lonely children stuck at home by letting them personalize their own character, theme their
           game worlds with Nickelodeon shows, and most importantly, connect with friends and family through manhunt
           within a rich, 3D world. Simultaneously, it facilitates learning of important health and safety knowledge
-          pertaining to COVID-19; if one gets “tagged”, they are challenged to answer questions correctly within a time
+          pertaining to COVID-19; if one gets “tagged”, they are challenged to answer questions correctly in a time
           limit. Enriching the game experience are items which give temporary power-ups.
         </p>
-
-        <h3 class="bodyTypeBold marginM--top marginXS--bottom">Live Prototype</h3>
+      </section>
+      <div class="mediaCenterer">
+        <h3 class=" bodyTypeBold marginM--top marginXS--bottom">Live Prototype</h3>
         <iframe class="playdiumPrototype"
           src="https://xd.adobe.com/embed/e77d2740-afee-4cd0-bc67-a7ae5c67774d-b22e/?fullscreen" frameborder="0"
           allowfullscreen></iframe>
-      </section>
+      </div>
     </div>
   </div>
 
