--- a/about.html
+++ b/about.html
@@ -77,30 +77,34 @@
         <img class="aboutPhoto2" src="./img/0J8A0170.jpg" loading="lazy" alt="">
       </header>
 
-      <h2 class="projectTitle marginParaSpace--bottom reveal">Hi, I’m Jasper! Product designer & early riser.</h2>
+      <div class="bodyWrapper">
+        <h2 class="projectTitle marginParaSpace--bottom reveal">Hi, I’m Jasper! Lifelong learner & early riser.</h2>
 
-      <p class="bodyType marginParaSpace--bottom reveal">
-        Previously, I worked on the Branded Content team at Facebook as a Product Design Intern.
-      </p>
-      <p class="bodyType marginParaSpace--bottom reveal">
-        I am a product designer who has worked on design systems, influencer marketplaces, and business
-        tools. In my professional career, I have always experienced a strong pull towards working in the technology
-        sector due to its capacity to spark positive global change on a grand scale. From past experiences, I have felt
-        most content tackling complex problem spaces collaboratively to extend human potential.
-      </p>
-      <p class="bodyType marginParaSpace--bottom reveal">
-        My expertise at the moment lies in zero-to-one projects involving a high degree of product thinking and visual
-        design. I consider it my mission to develop simple yet elegant solutions which are responsive to human needs and
-        considerate of human frailties.
-      </p>
-      <p class="bodyType marginS--bottom reveal">
-        In my spare time, I enjoy participating in hackathons, reading, fitness, and exploring places through
-        photography. With empathetic design, I hope to help those less fortunate and to inspire others to pursue their
-        greater dreams and ambitions.
-      </p>
-      <hr>
+        <p class="bodyType marginParaSpace--bottom reveal">
+          Previously, I was a Product Design Intern on Facebook's Branded Content team during Summer 2020.
+        </p>
+        <p class="bodyType marginParaSpace--bottom reveal">
+          I am a product designer who has worked on design systems, influencer marketplaces, and business
+          tools. In my professional career, I have always experienced a strong pull towards working in the technology
+          sector due to its capacity to spark positive global change on a grand scale. From past experiences, I have
+          felt
+          most content tackling complex problem spaces collaboratively to extend human potential.
+        </p>
+        <p class="bodyType marginParaSpace--bottom reveal">
+          My expertise at the moment lies in zero-to-one projects involving a high degree of product thinking and visual
+          design. I consider it my mission to develop simple yet elegant solutions which are responsive to human needs
+          and
+          considerate of human frailties.
+        </p>
+        <p class="bodyType marginS--bottom reveal">
+          In my spare time, I enjoy participating in hackathons, reading, fitness, and exploring places through
+          photography. With empathetic design, I hope to help those less fortunate and to inspire others to pursue their
+          greater dreams and ambitions.
+        </p>
+        <hr>
 
-      <h3 class="bodyTypeBold marginM--top margin1rem--bottom">Achievements 🏆</h3>
+        <h3 class="bodyTypeBold marginM--top margin1rem--bottom">Achievements 🏆</h3>
+      </div>
 
       <p class="quickStatType margin1rem--bottom">
         <span class="quickStatTitleType">1st Place Award</span>
