--- a/canadaLanguages.html
+++ b/canadaLanguages.html
@@ -111,7 +111,7 @@
       </header>
 
       <!-- Main content -->
-      <section class="marginM--top">
+      <section class="marginM--top bodyWrapper">
         <h2 class="projectTitle marginXS--bottom">About Canada's Languages</h2>
         <p class="bodyType marginS--bottom">
           I spotted an opportunity to make an informative
@@ -121,7 +121,9 @@
           Canadian culture. Thus, the most spoken non-official languages
           were the focal point of my content.
         </p>
+      </section>
 
+      <div class="mediaCenterer">
         <h3 class="bodyTypeBold marginM--top marginXS--bottom">Raw Screens</h3>
 
         <div class="contentGallery">
@@ -155,8 +157,8 @@
             </li>
           </ul>
         </div>
+      </div>
 
-      </section>
     </div>
   </div>
 
