--- a/index.html
+++ b/index.html
@@ -191,10 +191,10 @@
             </div>
           </a>
         </article>
-        <!--
+      -->
 
-        <!--
-        Canada's Languages
+
+        <!--Canada's Languages-->
         <article>
           <a class="projectSingle" href="canadaLanguages.html">
             <img class="projectCover" src="./img/home-cover-Languages.jpg" loading="lazy" alt="Historia">
@@ -203,10 +203,10 @@
               <p class="projectDescription">A website for tourists exploring Canada's top non-official languages.</p>
               <span class="projectType">Data Visualization</span>
               <span class="projectType">Web Design</span>
+              <span class="projectType">Illustration</span>
             </div>
           </a>
         </article>
-        -->
 
       </section>
     </div>
