--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@
               <h2 class="projectTitle">Facebook Internship <img class="emoji" src="img/lockEmoji.png" loading="lazy"
                   alt="Lock"></h2>
               <p class="projectDescription">Fostering more clarity for branded content creators &
-                <span class="moreDetail">potential</span> partners.</p>
+                <span class="moreDetail">potential</span> partners.
+              </p>
               <!-- <p class="awardText">
         <img class="adobeIcon" src="./img/adobe.svg" loading="lazy" alt="Adobe">
         Adobe Jam 1st Place
@@ -177,8 +178,7 @@
           </a>
         </article>
 
-        <!--
-        Spark
+        <!--Spark-->
         <article>
           <a class="projectSingle" href="spark.html">
             <img class="projectCover" src="./img/home-cover-Spark.jpg" loading="lazy" alt="Historia">
@@ -191,8 +191,6 @@
             </div>
           </a>
         </article>
-      -->
-
 
         <!--Canada's Languages-->
         <article>
