--- a/spark.html
+++ b/spark.html
@@ -115,7 +115,7 @@
       </header>
 
       <!-- Main content -->
-      <section class="marginM--top">
+      <section class="marginM--top bodyWrapper">
 
         <h2 class="projectTitle marginXS--bottom">What is Spark?</h2>
         <p class="bodyType marginS--bottom">
@@ -126,7 +126,8 @@
         </p>
         <p class="bodyTypeBold">Target Demographic</p>
         <p class="bodyType">• Established professionals working in the creative industry
-          <br>• Ages 22+</p>
+          <br>• Ages 22+
+        </p>
 
       </section>
 
