--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
             <img class="emoji" src="./img/rightArrowEmoji.png" loading="lazy" alt="Right Arrow"> Loves <span
               class="moreDetail">delightfully</span> usable
             experiences<br>
-            <img class="emoji" src="./img/rightArrowEmoji.png" loading="lazy" alt="Right Arrow"> Forever singing in the
-            shower<br>
+            <img class="emoji" src="./img/rightArrowEmoji.png" loading="lazy" alt="Right Arrow"> Seeking 2021 product
+            design internships<br>
           </h2>
 
           <div class="socialHeader">
@@ -126,11 +126,13 @@
       <section class="projects marginTopBottom">
         <!-- Facebook Internship -->
         <article>
-          <a class="projectSingle locked" href="#">
+          <a class="projectSingle locked" href="fbintern.html">
             <img class="projectCover" src="./img/home-cover-FB.jpg" loading="lazy" alt="Historia">
             <div class="reveal">
-              <h2 class="projectTitle">Facebook Internship <img class="emoji" src="img/lockEmoji.png" loading="lazy"
-                  alt="Lock"></h2>
+              <h2 class="projectTitle">Facebook Internship
+                <!--<img class="emoji" src="img/lockEmoji.png" loading="lazy"
+                  alt="Lock">-->
+              </h2>
               <p class="projectDescription">Fostering more clarity for branded content creators &
                 <span class="moreDetail">potential</span> partners.
               </p>
@@ -141,6 +143,24 @@
               <span class="projectType">Product Thinking</span>
               <span class="projectType">Interaction</span>
               <span class="projectType">Visual</span>
+            </div>
+          </a>
+        </article>
+
+        <!-- Kumo Smart Mask -->
+        <article>
+          <a class="projectSingle" href="https://www.notion.so/Kumo-Smart-Mask-a6ab4a3a38184989886887746a99f04e"
+            target="_blank">
+            <img class="projectCover" src="./img/home-cover-Kumo-Mask.jpg" loading="lazy" alt="Kumo Smart Mask">
+            <div class="reveal">
+              <h2 class="projectTitle">Kumo Smart Mask</h2>
+              <p class="projectDescription">Reimagining a more inclusive mask experience.</p>
+              <!-- <p class="awardText">
+                <img class="adobeIcon" src="./img/adobe.svg" loading="lazy" alt="Adobe">
+                Adobe Jam 1st Place
+              </p> -->
+              <span class="projectType">Product Design</span>
+              <span class="projectType">Industrial Design</span>
             </div>
           </a>
         </article>
@@ -188,6 +208,7 @@
                 resources.</p>
               <span class="projectType">Front-End Code</span>
               <span class="projectType">Product Design</span>
+              <span class="projectType">Motion Graphics</span>
             </div>
           </a>
         </article>
