--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               code
             </span><br>
             <img class="emoji" src="./img/rightArrowEmoji.png" loading="lazy" alt="Right Arrow"> Former <a
-              class="fbLinkHeader" href="https://facebook.design/" target="_blank">Facebook</a> <span
+              class="fbLinkHeader" href="https://design.facebook.com/" target="_blank">Facebook</a> <span
               class="moreDetail">Product</span>
             Design
             Intern<br>
